--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <nav>
         <h2>Tom Chapman | <span>Web</span></h2>
-        <ul>
+        <!-- <ul>
             <li><a>About Me</a></li>
             <li><a>My Work</a></li>
             <li><a>Contact Me</a></li>
-        </ul>
+        </ul> -->
     </nav>
 
     <div class="hero">
@@ -55,28 +55,54 @@
     
     <hr/>
 
-    <div class="employment">
-        <h2>Employment Experience.</h2>
-        <h3>Customer Assistant - WM Morrisons PLC (2017-)</h3>
-        <ul>
-            <hr/>
-            <li>Problem-solving skills</li>
-            <hr/>
-            <li>Team player</li>
-            <hr/>
-            <li>Strong eye for detail</li>
-            <hr/>
-            <li>Excellent communication skills</li>
-            <hr/>
-            <li>Helping customers meet their needs</li>
-            <hr/>
-        </ul>
+    <div class="employment-skills-box">
+        <div class="employment">
+            <h2>Employment Experience.</h2>
+            <h3>Customer Assistant - WM Morrisons PLC (2017-)</h3>
+            <ul>
+                <hr/>
+                <li>Problem-solving skills</li>
+                <hr/>
+                <li>Team player</li>
+                <hr/>
+                <li>Strong eye for detail</li>
+                <hr/>
+                <li>Excellent communication skills</li>
+                <hr/>
+                <li>Helping customers meet their needs</li>
+                <hr/>
+            </ul>
+        </div>
+
+        <div class="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Bootstrap</li>
+                <li>Node</li>
+            </ul>
+        </div>
     </div>
 
     <hr />
 
     <div class="projects">
     <h2>My Projects</h2>
+        <div class="project-cards-div">
+            <div class="project-card">
+                <img src="./assets/to-do-list.png" alt="to-do-list web app screenshot">
+                <h3>To-do list web app</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+                <p>Interactive to-do list web app where users can add tasks. Dynamically displays the current day and number of tasks.</p>
+                <a href="https://tomchaweb.github.io/to-do-list/">Link</a>
+            </div>
+        </div>
     </div>
 
     <hr/>
